--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 
 @custom-variant dark (&:is(.dark *));
 @theme {
+  --gradient-collybrix: 132.14deg, #124675 13.59%, #247292 26.97%,
+    #2d88a0 39.12%, #369dae 51.72%, #48c8cb 66.4%, #59f3e7 79.14%,
+    #acf9f3 88.48%;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
@@ -36,10 +39,15 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --light: block;
+  --dark: none;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --gradient-collybrix: 132.14deg, #124675 13.59%, #247292 26.97%,
+      #2d88a0 39.12%, #369dae 51.72%, #48c8cb 66.4%, #59f3e7 79.14%,
+      #acf9f3 88.48%;
     --background: oklch(0.145 0 0);
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.145 0 0);
@@ -72,10 +80,14 @@
     --sidebar-accent-foreground: oklch(0.985 0 0);
     --sidebar-border: oklch(0.269 0 0);
     --sidebar-ring: oklch(0.439 0 0);
+    --light: none;
+    --dark: block;
   }
 }
 
 @theme inline {
+  --display-light: var(--light);
+  --display-dark: var(--dark);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
